--- a/templates/course_details.html
+++ b/templates/course_details.html
@@ -74,7 +74,7 @@
             margin: 5px 0;
         }
         footer a {
-            color: #d1d1d1;
+            color: white;
             text-decoration: none;
         }
         footer a:hover {
