--- a/templates/course_list.html
+++ b/templates/course_list.html
@@ -76,7 +76,7 @@
             font-size: 16px;
         }
         footer a {
-            color: #007bff;
+            color: white;
             text-decoration: none;
         }
         footer a:hover {
